--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dynamicfavorites",
   "displayName": "Dynamic Favorites",
+  "publisher": "BoHanCoder",
   "description": "Show favorites files with custom patterns base on custom root directory patterns",
   "version": "0.0.1",
   "engines": {
@@ -71,5 +72,9 @@
     "sinon": "^15.0.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bohan-v/vscode-dynamicfavorites.git"
   }
 }
