--- a/package.json
+++ b/package.json
@@ -54,24 +54,26 @@
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js"
   },
+  "dependencies": {
+    "@types/glob": "^8.1.0",
+    "@types/node": "16.x",
+    "@types/vscode": "^1.78.0",
+    "ajv": "^8.12.0",
+    "glob": "^8.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
+  },
   "devDependencies": {
     "@types/chai": "^4.3.5",
-    "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
-    "@types/node": "16.x",
     "@types/sinon": "^10.0.15",
-    "@types/vscode": "^1.78.0",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "@vscode/test-electron": "^2.3.0",
-    "ajv": "^8.12.0",
     "chai": "^4.3.7",
     "eslint": "^8.39.0",
-    "glob": "^8.1.0",
     "mocha": "^10.2.0",
-    "sinon": "^15.0.4",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "sinon": "^15.0.4"
   },
   "repository": {
     "type": "git",
