--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "displayName": "Dynamic Favorites",
   "publisher": "BoHanCoder",
   "description": "Show favorites files with custom patterns base on custom root directory patterns",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "engines": {
     "vscode": "^1.78.0"
   },
   "categories": [
     "Other"
   ],
+  "icon": "images/icon.png",
   "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
